# Olio-ohjelmointi

./: .gitignore  olioohjelmointiviikko1.cpp
teht1/: CMakeLists.txt  main.cpp
teht2/Arvauspeli/: CMakeLists.txt  game.cpp  game.h  main.cpp
teht2/RandomGen/: CMakeLists.txt  main.cpp  random.cpp  random.h
teht3/Italialainenkokki/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
teht4/Viikko4Pankkitilit/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
teht5/Viikko5Notifikaattori/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
teht6/Viikko6Standardikirjasto/: main.cpp  student.cpp  student.h
teht7/Viikko7Laskinapplikaatio/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
teht8/Viikko8shakkikello/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko6esim/: CMakeLists.txt  main.cpp  student.cpp  student.h
